<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormActivity"
    android:gravity="center">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_employee_here"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginBottom="50dp"/>

        <EditText
            android:id="@+id/emp_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_employee_name_here"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/emp_salary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_employee_salary_here"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/emp_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_employee_city_here"
            android:minHeight="48dp" />
        <Button
            android:id="@+id/emp_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"/>
        <Button
            android:id="@+id/btn_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Profile"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Delete"/>

    </LinearLayout>

</RelativeLayout>